<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/secondary_margin"
        android:text="@string/first_activity"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="300dp"
        android:layout_height="170dp"
        android:layout_gravity="center"
        android:background="@color/white"
        android:contentDescription="@string/activity" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/secondary_margin"
        android:text="@string/first_activity_description"
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"/>
</LinearLayout>