<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    android:orientation="vertical"
    android:padding="@dimen/default_margin"
    tools:context="net.interactive.pauses.LoginActivity">

    <android.support.v4.widget.ContentLoadingProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/secondary_margin">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/secondary_margin"
            android:background="@color/blue"
            android:onClick="facebookLogin"
            android:text="@string/facebook_login"
            android:textColor="@color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:onClick="googleLogin"
            android:text="@string/google_login"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/name_label"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:background="@color/white"
            android:inputType="text"
            android:padding="@dimen/default_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/secondary_margin"
            android:text="@string/avatar_label"
            android:textAlignment="center"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/secondary_margin"
            android:columnCount="3"
            android:rowCount="2">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/secondary_margin"
                android:background="@color/white"
                android:contentDescription="@string/avatar"
                android:onClick="avatarSelected" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/secondary_margin"
                android:background="@color/white"
                android:contentDescription="@string/avatar"
                android:onClick="avatarSelected" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/secondary_margin"
                android:background="@color/white"
                android:contentDescription="@string/avatar"
                android:onClick="avatarSelected" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/secondary_margin"
                android:background="@color/white"
                android:contentDescription="@string/avatar"
                android:onClick="avatarSelected" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/secondary_margin"
                android:background="@color/white"
                android:contentDescription="@string/avatar"
                android:onClick="avatarSelected" />

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="@dimen/secondary_margin"
                android:background="@color/white"
                android:contentDescription="@string/avatar"
                android:onClick="avatarSelected" />
        </GridLayout>

        <Button
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="simpleLogin"
            android:text="@string/start_button" />
    </LinearLayout>
</LinearLayout>
